Resources/Parsers/awk/awkParser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/awk/awk.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import awkListener from './awkListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class awkParser extends antlr4.Parser {

    static grammarFileName = "awk.g4";
    static literalNames = [ null, "'('", "')'", "','", "'{'", "'}'", "';'", 
                            "'['", "']'", "'>'", "'|'", "'+'", "'-'", "'^'", 
                            "'*'", "'/'", "'%'", "'<'", "'~'", "'?'", "':'", 
                            "'!'", "'='", "'$'", "'BEGIN'", "'break'", "'continue'", 
                            "'delete'", "'do'", "'else'", "'END'", "'exit'", 
                            "'for'", "'function'", "'getline'", "'if'", 
                            "'in'", "'next'", "'print'", "'printf'", "'return'", 
                            "'while'", null, "'+='", "'&&'", "'>>'", "'--'", 
                            "'/='", "'=='", "'>='", "'++'", "'<='", "'%='", 
                            "'*='", "'!='", "'!~'", "'||'", "'^='", "'-='" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             "BEGIN", "BREAK", "CONTINUE", "DELETE", "DO", 
                             "ELSE", "END", "EXIT", "FOR", "FUNCTION", "GETLINE", 
                             "IF", "IN", "NEXT", "PRINT", "PRINTF", "RETURN", 
                             "WHILE", "BUILTIN_FUNC_NAME", "ADD_ASSIGN", 
                             "AND", "APPEND", "DECR", "DIV_ASSIGN", "EQ", 
                             "GE", "INCR", "LE", "MOD_ASSIGN", "MUL_ASSIGN", 
                             "NE", "NO_MATCH", "OR", "POW_ASSIGN", "SUB_ASSIGN", 
                             "COMMENT", "ERE", "ESC_NEWLINE", "NEWLINE", 
                             "NUMBER", "SPACE", "STRING", "WORD" ];
    static ruleNames = [ "program", "item_list", "item", "param_list_opt", 
                         "param_list", "pattern", "normal_pattern", "special_pattern", 
                         "action_", "terminator", "terminated_statement_list", 
                         "unterminated_statement_list", "terminated_statement", 
                         "unterminated_statement", "terminatable_statement", 
                         "simple_statement_opt", "simple_statement", "print_statement", 
                         "simple_print_statement", "output_redirection", 
                         "expr_list_opt", "expr_list", "multiple_expr_list", 
                         "expr_opt", "expr", "unary_expr", "non_unary_expr", 
                         "print_expr_list_opt", "print_expr_list", "print_expr", 
                         "unary_print_expr", "non_unary_print_expr", "lvalue", 
                         "simple_get", "newline_opt", "number", "string", 
                         "ere", "builtin_func_name", "func_name", "name" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = awkParser.ruleNames;
        this.literalNames = awkParser.literalNames;
        this.symbolicNames = awkParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 9:
    	    		return this.terminator_sempred(localctx, predIndex);
    	case 25:
    	    		return this.unary_expr_sempred(localctx, predIndex);
    	case 26:
    	    		return this.non_unary_expr_sempred(localctx, predIndex);
    	case 30:
    	    		return this.unary_print_expr_sempred(localctx, predIndex);
    	case 31:
    	    		return this.non_unary_print_expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    terminator_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 3);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    unary_expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 1:
    			return this.precpred(this._ctx, 11);
    		case 2:
    			return this.precpred(this._ctx, 10);
    		case 3:
    			return this.precpred(this._ctx, 9);
    		case 4:
    			return this.precpred(this._ctx, 8);
    		case 5:
    			return this.precpred(this._ctx, 7);
    		case 6:
    			return this.precpred(this._ctx, 6);
    		case 7:
    			return this.precpred(this._ctx, 5);
    		case 8:
    			return this.precpred(this._ctx, 4);
    		case 9:
    			return this.precpred(this._ctx, 3);
    		case 10:
    			return this.precpred(this._ctx, 2);
    		case 11:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    non_unary_expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 12:
    			return this.precpred(this._ctx, 18);
    		case 13:
    			return this.precpred(this._ctx, 21);
    		case 14:
    			return this.precpred(this._ctx, 20);
    		case 15:
    			return this.precpred(this._ctx, 19);
    		case 16:
    			return this.precpred(this._ctx, 17);
    		case 17:
    			return this.precpred(this._ctx, 16);
    		case 18:
    			return this.precpred(this._ctx, 15);
    		case 19:
    			return this.precpred(this._ctx, 13);
    		case 20:
    			return this.precpred(this._ctx, 12);
    		case 21:
    			return this.precpred(this._ctx, 11);
    		case 22:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    unary_print_expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 23:
    			return this.precpred(this._ctx, 9);
    		case 24:
    			return this.precpred(this._ctx, 8);
    		case 25:
    			return this.precpred(this._ctx, 7);
    		case 26:
    			return this.precpred(this._ctx, 6);
    		case 27:
    			return this.precpred(this._ctx, 5);
    		case 28:
    			return this.precpred(this._ctx, 4);
    		case 29:
    			return this.precpred(this._ctx, 3);
    		case 30:
    			return this.precpred(this._ctx, 2);
    		case 31:
    			return this.precpred(this._ctx, 1);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    non_unary_print_expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 32:
    			return this.precpred(this._ctx, 15);
    		case 33:
    			return this.precpred(this._ctx, 18);
    		case 34:
    			return this.precpred(this._ctx, 17);
    		case 35:
    			return this.precpred(this._ctx, 16);
    		case 36:
    			return this.precpred(this._ctx, 14);
    		case 37:
    			return this.precpred(this._ctx, 13);
    		case 38:
    			return this.precpred(this._ctx, 11);
    		case 39:
    			return this.precpred(this._ctx, 10);
    		case 40:
    			return this.precpred(this._ctx, 9);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, awkParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 82;
	        this.item_list();
	        this.state = 84;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 1101010962) !== 0) || ((((_la - 33)) & ~0x1f) === 0 && ((1 << (_la - 33)) & 1208099331) !== 0) || _la===65 || _la===66) {
	            this.state = 83;
	            this.item();
	        }

	        this.state = 86;
	        this.match(awkParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	item_list() {
	    let localctx = new Item_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, awkParser.RULE_item_list);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 93;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,1,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 88;
	                this.item();
	                this.state = 89;
	                this.terminator(0); 
	            }
	            this.state = 95;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,1,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	item() {
	    let localctx = new ItemContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, awkParser.RULE_item);
	    try {
	        this.state = 109;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 96;
	            this.action_();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 97;
	            this.pattern();
	            this.state = 98;
	            this.action_();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 100;
	            this.normal_pattern();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 101;
	            this.match(awkParser.FUNCTION);
	            this.state = 102;
	            this.func_name();
	            this.state = 103;
	            this.match(awkParser.T__0);
	            this.state = 104;
	            this.param_list_opt();
	            this.state = 105;
	            this.match(awkParser.T__1);
	            this.state = 106;
	            this.newline_opt();
	            this.state = 107;
	            this.action_();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	param_list_opt() {
	    let localctx = new Param_list_optContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, awkParser.RULE_param_list_opt);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 112;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===66) {
	            this.state = 111;
	            this.param_list();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	param_list() {
	    let localctx = new Param_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, awkParser.RULE_param_list);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 114;
	        this.name();
	        this.state = 119;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 115;
	            this.match(awkParser.T__2);
	            this.state = 116;
	            this.name();
	            this.state = 121;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pattern() {
	    let localctx = new PatternContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, awkParser.RULE_pattern);
	    try {
	        this.state = 124;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	        case 11:
	        case 12:
	        case 21:
	        case 23:
	        case 34:
	        case 42:
	        case 46:
	        case 50:
	        case 60:
	        case 63:
	        case 65:
	        case 66:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 122;
	            this.normal_pattern();
	            break;
	        case 24:
	        case 30:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 123;
	            this.special_pattern();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	normal_pattern() {
	    let localctx = new Normal_patternContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, awkParser.RULE_normal_pattern);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 126;
	        this.expr();
	        this.state = 131;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===3) {
	            this.state = 127;
	            this.match(awkParser.T__2);
	            this.state = 128;
	            this.newline_opt();
	            this.state = 129;
	            this.expr();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	special_pattern() {
	    let localctx = new Special_patternContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, awkParser.RULE_special_pattern);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 133;
	        _la = this._input.LA(1);
	        if(!(_la===24 || _la===30)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	action_() {
	    let localctx = new Action_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, awkParser.RULE_action_);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        this.match(awkParser.T__3);
	        this.state = 136;
	        this.newline_opt();
	        this.state = 139;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,7,this._ctx);
	        if(la_===1) {
	            this.state = 137;
	            this.terminated_statement_list();

	        } else if(la_===2) {
	            this.state = 138;
	            this.unterminated_statement_list();

	        }
	        this.state = 141;
	        this.match(awkParser.T__4);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	terminator(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new TerminatorContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 18;
	    this.enterRecursionRule(localctx, 18, awkParser.RULE_terminator, _p);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 146;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 6:
	            this.state = 144;
	            this.match(awkParser.T__5);
	            break;
	        case 62:
	            this.state = 145;
	            this.match(awkParser.NEWLINE);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 152;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                localctx = new TerminatorContext(this, _parentctx, _parentState);
	                this.pushNewRecursionContext(localctx, _startState, awkParser.RULE_terminator);
	                this.state = 148;
	                if (!( this.precpred(this._ctx, 3))) {
	                    throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 3)");
	                }
	                this.state = 149;
	                this.match(awkParser.NEWLINE); 
	            }
	            this.state = 154;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	terminated_statement_list() {
	    let localctx = new Terminated_statement_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, awkParser.RULE_terminated_statement_list);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 156; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 155;
	            this.terminated_statement();
	            this.state = 158; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 2661292114) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 2416199661) !== 0) || _la===65 || _la===66);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	unterminated_statement_list() {
	    let localctx = new Unterminated_statement_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, awkParser.RULE_unterminated_statement_list);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 163;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,11,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 160;
	                this.terminated_statement(); 
	            }
	            this.state = 165;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,11,this._ctx);
	        }

	        this.state = 166;
	        this.unterminated_statement();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	terminated_statement() {
	    let localctx = new Terminated_statementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, awkParser.RULE_terminated_statement);
	    var _la = 0;
	    try {
	        this.state = 216;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 168;
	            this.action_();
	            this.state = 169;
	            this.newline_opt();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 171;
	            this.match(awkParser.IF);
	            this.state = 172;
	            this.match(awkParser.T__0);
	            this.state = 173;
	            this.expr();
	            this.state = 174;
	            this.match(awkParser.T__1);
	            this.state = 175;
	            this.newline_opt();
	            this.state = 176;
	            this.terminated_statement();
	            this.state = 181;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,12,this._ctx);
	            if(la_===1) {
	                this.state = 177;
	                this.match(awkParser.ELSE);
	                this.state = 178;
	                this.newline_opt();
	                this.state = 179;
	                this.terminated_statement();

	            }
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 183;
	            this.match(awkParser.WHILE);
	            this.state = 184;
	            this.match(awkParser.T__0);
	            this.state = 185;
	            this.expr();
	            this.state = 186;
	            this.match(awkParser.T__1);
	            this.state = 187;
	            this.newline_opt();
	            this.state = 188;
	            this.terminated_statement();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 190;
	            this.match(awkParser.FOR);
	            this.state = 191;
	            this.match(awkParser.T__0);
	            this.state = 192;
	            this.simple_statement_opt();
	            this.state = 193;
	            this.match(awkParser.T__5);
	            this.state = 194;
	            this.expr_opt();
	            this.state = 195;
	            this.match(awkParser.T__5);
	            this.state = 196;
	            this.simple_statement_opt();
	            this.state = 197;
	            this.match(awkParser.T__1);
	            this.state = 198;
	            this.newline_opt();
	            this.state = 199;
	            this.terminated_statement();
	            break;
